# Inertial-Motion-Capture

./: LICENSE  README.md  cli  cli.py
cli/: cli  cli.py
imc-client/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Inertial-Motion-Capture-csharp.sln  Inertial-Motion-Capture.sln  Inertial-Motion-Capture.userprefs  imc-client-csharp.sln  imc-client.sln  imc-client.userprefs
imc-client/Assets/: Demo-Game.unity  Demo-Monkey.unity  Demo-Scene-2.unity  Demo-Scene.unity  Demo-Start.unity  MovingAverageFilter.cs  New Terrain.asset  SceneMonkey.cs  SceneStart.cs  SocketClient.cs  SocketEchoController.cs  SocketTransformController.cs  Target Cube.prefab  Target-2.prefab  Target-3(Low-Break).prefab  Target-Drydock.unity  Target.prefab  [Deprecated]Demo-Scene.unity  ball-prefab.prefab  ball.fbx  catapult.fbx  catapult_basket.fbx  monkey.fbx
imc-client/Assets/Demo-Game/: LightmapSnapshot.asset
imc-client/Assets/Demo-Start/: LightmapSnapshot.asset
imc-client/Assets/Fracture - Box Destruction - Standard/: Diffuse.mat  _Fracture - Big Scene.unity
imc-client/Assets/Materials/: Ball.mat  Floor.mat  Highlight.mat  Monkey.mat  Red.mat  Target.mat  Wall Material.mat  White.mat  ground-material.mat
imc-client/Assets/catapult-arm/: catapult-arm.blend  catapult-arm.blend1
imc-client/Assets/catapult-base/: catapult-base.blend
imc-client/Models/ball/: ball.blend
imc-client/Models/basket/: basket.blend  basket.blend1  basket.fbx
imc-client/Models/catapult/: catapult.blend  catapult.blend1  catapult2.blend  catapult2.blend1  catapult2_rigged.blend  catapult2_rigged.blend1  (+4 more)
imc-client/Models/catapult-arm/: catapult-arm.blend  catapult-arm.fbx
imc-client/Models/catapult-base/: catapult-base.fbx
imc-client/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
imc-client/Test_Data/: mainData  output_log.txt  sharedassets0.assets
imc-host/: CMakeLists.txt
imc-host/lib/: CMakeLists.txt
imc-host/lib/bno055-driver/: CMakeLists.txt
imc-host/src/: CMakeLists.txt  main.cpp
imc-server/: CMakeLists.txt  csv_log.cpp  csv_log.hpp  difference_filter.cpp  difference_filter.hpp  imc_time.cpp  imc_time.hpp  imu.cpp  imu.hpp  log.h  main.cpp  moving_average_filter.cpp  moving_average_filter.hpp  quaternion.hpp  socket_server.cpp  socket_server.hpp  status.h  vector3.hpp
imc-server/bno055/: CMakeLists.txt  bno055.c
imc-server/bno055-driver/: bno055.c  bno055.h
scripts/: edison.py  push.sh  serial.sh  ssh.sh  sync.sh
(+4 files in other folders)
